@@ -36,7 +36,6 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.stream.Collectors;
 
 import org.apache.camel.CamelContext;
 import org.apache.camel.CamelContextAware;
@@ -225,7 +224,7 @@ public class LocalCliConnector extends ServiceSupport implements CliConnector, C
                             }
                             return false;
                         })
-                        .collect(Collectors.toList());
+                        .toList();
                 for (String id : ids) {
                     try {
                         String command = root.getString("command");
@@ -322,6 +321,19 @@ public class LocalCliConnector extends ServiceSupport implements CliConnector, C
                 if (dc != null) {
                     String stacktrace = root.getString("stacktrace");
                     JsonObject json = (JsonObject) dc.call(DevConsole.MediaType.JSON, Map.of("stacktrace", stacktrace));
+                    LOG.trace("Updating output file: {}", outputFile);
+                    IOHelper.writeText(json.toJson(), outputFile);
+                }
+            } else if ("stub".equals(action)) {
+                String filter = root.getString("filter");
+                String limit = root.getString("limit");
+                String browse = root.getString("browse");
+
+                DevConsole dc = camelContext.getCamelContextExtension().getContextPlugin(DevConsoleRegistry.class)
+                        .resolveById("stub");
+                if (dc != null) {
+                    JsonObject json = (JsonObject) dc.call(DevConsole.MediaType.JSON,
+                            Map.of("filter", filter, "limit", limit, "browse", browse));
                     LOG.trace("Updating output file: {}", outputFile);
                     IOHelper.writeText(json.toJson(), outputFile);
                 }
